--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
       "includePackages": [ "root" ]
     }
   },
-  "scripts": {
-    "test": "esy dune runtest"
-  },
+  "scripts": { "test": "esy dune runtest" },
   "dependencies": {
     "@esy-ocaml/reason": "*",
     "@opam/bos": "*",
@@ -21,7 +19,8 @@
     "@opam/ppx_expect": "v0.11.1",
     "@opam/ppx_inline_test": "v0.11.0",
     "@opam/sexplib": "v0.11.0",
-    "@opam/yojson": "1.4.1",
+    "@opam/yojson": "^1.4.1",
+    "dune": "^0.2.1",
     "ocaml": "~4.6.0",
     "refmterr": "*"
   },
