Adds terminal coloring for bootstrapping script

--- a/utils/dune
+++ b/utils/dune
@@ -2,6 +2,6 @@
 (name PesyUtils)
 (inline_tests (flags -verbose))
 (public_name pesy.utils)
-(libraries unix str)
+(libraries unix str pastel.lib)
 (preprocess (pps ppx_expect ppx_inline_test))
 (flags -w -6))
