--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@opam/ppx_inline_test": "v0.11.0",
     "@opam/sexplib": "v0.11.0",
     "@opam/yojson": "^1.4.1",
+    "@reason-native/pastel": "^0.2.0",
     "dune": "^0.2.1",
     "ocaml": "~4.6.0",
     "refmterr": "*"
