Remove pesy-configure
Not needed since it has been merged into pesy

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": [ "refmterr dune build -p #{self.name}" ],
     "buildsInSource": "_build",
     "release": {
-      "bin": [ "pesy", "pesy-configure" ],
+      "bin": [ "pesy" ],
       "includePackages": [ "root" ]
     }
   },
