--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "buildDirs": {
     "bin": {
-      "pesy": "Pesy.re",
+      "bin": {
+        "pesy": "Pesy.re"
+      },
       "require": [
-        "pesy/lib"
+        "pesy/lib",
+        "pesy/utils"
       ]
     },
     "lib": {
@@ -52,7 +55,7 @@
       ],
       "flags": [
         "-w",
-        "-33+9"
+        "-6"
       ],
       "preprocess": [
         "pps",
@@ -79,12 +82,14 @@
     "@reason-native/pastel": "^0.2.0",
     "dune": "^0.2.1",
     "ocaml": "~4.6.0",
-    "refmterr": "*"
+    "refmterr": "*",
+    "pesy-self": "*"
   },
   "devDependencies": {
     "@opam/merlin": "*"
   },
   "resolutions": {
-    "@reason-native/pastel": "facebookexperimental/reason-native#028b0973b0268530609c3edfa4b4f3ebbf9fbb43"
+    "@reason-native/pastel": "facebookexperimental/reason-native#028b0973b0268530609c3edfa4b4f3ebbf9fbb43",
+    "pesy-self": "esy/pesy#fde323697a0357003d16fb6e057d7c7b0ee293fd"
   }
 }
