--- a/.ci/build.yaml
+++ b/.ci/build.yaml
@@ -15,6 +15,8 @@ jobs:
       displayName: 'Installing deps'
   - script: esy install
     displayName: 'Installing deps'
+  - script: esy pesy
+    displayName: 'esy pesy'
   - script: esy build
     displayName: 'Building'
   - ${{ if ne(parameters.sign, 'true') }}:
