--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,25 +1,45 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+name: Build npm release
 
+trigger:
+  - master
 
 jobs:
-- template: .ci/build.yaml  # Template reference
-  parameters:
-    host: macOS
-    pool:
-      vmImage: 'macOS-10.13'
+  - template: .ci/build-platform.yml
+    parameters:
+      platform: Linux
+      vmImage: ubuntu-16.04
+      STAGING_DIRECTORY: /home/vsts/STAGING
+      STAGING_DIRECTORY_UNIX: /home/vsts/STAGING
+      ESY__CACHE_INSTALL_PATH: /home/vsts/.esy/3_____________________________________________________________________/i
+      ESY__CACHE_SOURCE_TARBALL_PATH: /home/vsts/.esy/source/i
 
-- template: .ci/build.yaml  # Template reference
-  parameters:
-    host: Linux
-    pool:
-      vmImage: 'Ubuntu-16.04'
+  - template: .ci/build-platform.yml
+    parameters:
+      platform: macOS
+      vmImage: macOS-10.13
+      STAGING_DIRECTORY: /Users/vsts/STAGING
+      STAGING_DIRECTORY_UNIX: /Users/vsts/STAGING
+      ESY__CACHE_INSTALL_PATH: /Users/vsts/.esy/3____________________________________________________________________/i
+      ESY__CACHE_SOURCE_TARBALL_PATH: /Users/vsts/.esy/source/i
 
-- template: .ci/build.yaml  # Template reference
-  parameters:
-    host: Windows
+  - template: .ci/build-platform.yml
+    parameters:
+      platform: Windows
+      vmImage: vs2017-win2016
+      STAGING_DIRECTORY: C:\Users\VssAdministrator\STAGING
+      STAGING_DIRECTORY_UNIX: /C/Users/VssAdministrator/STAGING
+      ESY__CACHE_INSTALL_PATH: /C/Users/VssAdministrator/.esy/3_/i
+      ESY__CACHE_SOURCE_TARBALL_PATH: /C/Users/VssAdministrator/.esy/source/i
+
+  # This job is kept here as we want to have the platform names in the same file
+  - job: Release
+    displayName: Release
+    dependsOn:
+      - Linux
+      - macOS
+      - Windows
     pool:
-      vmImage: 'vs2017-win2016'
-    sign: true  # Extra step on Windows only
+      vmImage: macOS-10.13
+      demands: node.js
+    steps:
+      - template: .ci/cross-release.yml
