--- a/.ci/build-platform.yml
+++ b/.ci/build-platform.yml
@@ -29,8 +29,35 @@ jobs:
       - ${{ if ne(parameters.platform, 'Windows') }}:
           - script: esy test
             displayName: 'Running inline tests'
-      - script: "esy release"
-        displayName: "esy release"
+      - script: esy npm-release
+        displayName: 'Creating npm release'
+      - script: npm pack
+        displayName: 'NPM packing...'
+        workingDirectory: '_release'
+      - ${{ if eq(parameters.platform, 'Windows') }}:
+        - script: 'npm install -g .\pesy-0.0.0.tgz --unsafe-perm=true'
+          displayName: 'npm link... for tests'
+          workingDirectory: '_release'
+      - ${{ if eq(parameters.host, 'Linux') }}:
+        - script: 'sudo npm install -g ./pesy-0.0.0.tgz --unsafe-perm=true'
+          displayName: 'npm link... for tests'
+          workingDirectory: '_release'
+      - ${{ if eq(parameters.host, 'macOS') }}:
+        - script: 'sudo npm install -g ./pesy-0.0.0.tgz --unsafe-perm=false'
+          displayName: 'npm link... for tests'
+          workingDirectory: '_release'
+      - ${{ if ne(parameters.platform, 'Windows') }}:
+        - script: ./_build/install/default/bin/TestBootstrapper.exe
+          displayName: 'Running bootstrapper tests'
+      - ${{ if eq(parameters.platform, 'Windows') }}:
+        - script: .\_build\install\default\bin\TestBootstrapper.exe
+          displayName: 'Running bootstrapper tests'
+      - ${{ if ne(parameters.platform, 'Windows') }}:
+        - script: ./_build/install/default/bin/TestPesyConfigure.exe
+          displayName: 'Running pesy configure tests'
+      - ${{ if eq(parameters.platform, 'Windows') }}:
+        - script: .\_build\install\default\bin\TestPesyConfigure.exe
+          displayName: 'Running pesy configure tests'
       - template: utils/publish-build-cache.yml
       - task: PublishBuildArtifacts@1
         displayName: "Publish Artifact: ${{ parameters.platform }}"
