--- a/.ci/cross-release.yml
+++ b/.ci/cross-release.yml
@@ -27,6 +27,10 @@ steps:
     displayName: "npm pack"
     workingDirectory: "_release"
 
+  - bash: "sha1sum pesy-0.5.0.tgz"
+    displayName: "Calculating sha1"
+    workingDirectory: "_release"
+
   - task: PublishBuildArtifacts@1
     displayName: "Publish Artifact: Release"
     inputs:
