--- a/.ci/build-platform.yml
+++ b/.ci/build-platform.yml
@@ -43,7 +43,7 @@ jobs:
           displayName: 'npm link... for tests'
           workingDirectory: '_release'
       - ${{ if eq(parameters.platform, 'macOS') }}:
-        - script: 'sudo npm install -g ./pesy-0.5.0.tgz --unsafe-perm=false'
+        - script: 'npm install -g ./pesy-0.5.0.tgz --unsafe-perm=true'
           displayName: 'npm link... for tests'
           workingDirectory: '_release'
       - ${{ if ne(parameters.platform, 'Windows') }}:
