--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pesy",
-  "version": "0.5.0-alpha.1",
+  "version": "0.5.0-alpha.2",
   "description": "\"Esy Pesy\" - Your Esy Assistant.",
   "esy": {
     "build": [
@@ -23,7 +23,8 @@
       },
       "require": [
         "pesy/lib",
-        "pesy/utils"
+        "pesy/utils",
+        "cmdliner"
       ]
     },
     "lib": {
@@ -73,6 +74,7 @@
   "dependencies": {
     "@esy-ocaml/reason": "*",
     "@opam/bos": "*",
+    "@opam/cmdliner": "1.0.3",
     "@opam/dune": "*",
     "@opam/fpath": "*",
     "@opam/ppx_expect": "v0.11.1",
