--- a/.ci/cross-release.yml
+++ b/.ci/cross-release.yml
@@ -27,7 +27,7 @@ steps:
     displayName: "npm pack"
     workingDirectory: "_release"
 
-  - bash: "node .ci/checksum.js _release/pesy-0.5.0.tgz"
+  - bash: "node .ci/checksum.js _release/pesy-0.5.0-alpha.2.tgz"
     displayName: "Calculating sha1"
 
   - task: PublishBuildArtifacts@1
