--- a/.ci/build-platform.yml
+++ b/.ci/build-platform.yml
@@ -22,6 +22,8 @@ jobs:
       - template: utils/use-node.yml
       - template: utils/use-esy.yml
       - template: utils/restore-build-cache.yml
+      - script: "npm i -g verdaccio"
+        displayName: "Install verdaccio"
       - script: "esy install"
         displayName: "esy install"
       - script: "esy build"
@@ -29,37 +31,12 @@ jobs:
       - ${{ if ne(parameters.platform, 'Windows') }}:
           - script: esy test
             displayName: 'Running inline tests'
-      - script: esy npm-release
-        displayName: 'Creating npm release'
-      - script: npm pack
-        displayName: 'NPM packing...'
-        workingDirectory: '_release'
       - ${{ if eq(parameters.platform, 'Windows') }}:
-        - script: 'npm install -g .\pesy-0.5.0-alpha.2.tgz --unsafe-perm=true'
-          displayName: 'npm link... for tests'
-          workingDirectory: '_release'
-      - ${{ if eq(parameters.platform, 'Linux') }}:
-        - script: 'sudo npm install -g ./pesy-0.5.0-alpha.2.tgz --unsafe-perm=true'
-          displayName: 'npm link... for tests'
-          workingDirectory: '_release'
-      - ${{ if eq(parameters.platform, 'macOS') }}:
-        - script: 'npm install -g ./pesy-0.5.0-alpha.2.tgz --unsafe-perm=true'
-          displayName: 'npm link... for tests'
-          workingDirectory: '_release'
+          - script: .\_build\install\default\bin\Runner.exe
+            displayName: 'Running e2e tests'
       - ${{ if ne(parameters.platform, 'Windows') }}:
-        - script: ./_build/install/default/bin/TestBootstrapper.exe
-          displayName: 'Running bootstrapper tests'
-          continueOnError: true
-      - ${{ if eq(parameters.platform, 'Windows') }}:
-        - script: .\_build\install\default\bin\TestBootstrapper.exe
-          displayName: 'Running bootstrapper tests'
-          continueOnError: true
-      - ${{ if ne(parameters.platform, 'Windows') }}:
-        - script: ./_build/install/default/bin/TestPesyConfigure.exe
-          displayName: 'Running pesy configure tests'
-      - ${{ if eq(parameters.platform, 'Windows') }}:
-        - script: .\_build\install\default\bin\TestPesyConfigure.exe
-          displayName: 'Running pesy configure tests'
+          - script: ./_build/install/default/bin/Runner.exe
+            displayName: 'Running e2e tests'
       - template: utils/publish-build-cache.yml
       - task: PublishBuildArtifacts@1
         displayName: "Publish Artifact: ${{ parameters.platform }}"
