--- a/e2e-tests/dune
+++ b/e2e-tests/dune
@@ -1,6 +1,6 @@
 (executables
-(names TestBootstrapper TestPesyConfigure)
-(public_names TestBootstrapper.exe TestPesyConfigure.exe)
+(names Runner TestBootstrapper TestPesyConfigure)
+(public_names Runner.exe TestBootstrapper.exe TestPesyConfigure.exe)
 (libraries unix pesy.lib bos fpath))
 
 (data_only_dirs pesy-configure-test-projects)
