--- a/assets/dune
+++ b/assets/dune
@@ -2,15 +2,17 @@
    (name PesyAssets)
    (public_name pesy.assets)
 )
- 
+
 (install
  (section share_root)
- (files 
+ (files
          (pesy-package.template.json as template-repo/pesy-package.template.json)
          (pesy-gitignore.template as template-repo/pesy-gitignore.template)
          (pesy-Util.template.re as template-repo/pesy-Util.template.re)
          (pesy-README.template.md as template-repo/pesy-README.template.md)
          (pesy-Test.template.re as template-repo/pesy-Test.template.re)
+         (pesy-TestFramework.template.re as template-repo/pesy-TestFramework.template.re)
+         (pesy-RunTests.template.re as template-repo/pesy-RunTests.template.re)
          (pesy-App.template.re as template-repo/pesy-App.template.re)
          (azure-pipeline-templates/pesy-azure-pipelines.yml as template-repo/azure-pipeline-templates/pesy-azure-pipelines.yml)
          (azure-pipeline-templates/pesy-esy-build-steps.template.yml as template-repo/azure-pipeline-templates/pesy-esy-build-steps.template.yml)
