Update CI template
A few esy versions back we some issue with installing assets inside the sandbox because of which we had to create a separate binary called pesy-configure. This is not necessary anymore.

--- a/assets/azure-pipeline-templates/pesy-esy-build-steps.template.yml
+++ b/assets/azure-pipeline-templates/pesy-esy-build-steps.template.yml
@@ -8,7 +8,7 @@ steps:
     displayName: 'npm install -g esy@0.4.3'
   - script: esy install
     displayName: 'esy install'
-  - script: esy pesy-configure
+  - script: esy pesy
     displayName: 'esy pesy'
   - script: esy build
     displayName: 'esy build'
