Removes inline test setup.
TODO: comments out the inline unit tests that need to
be migrated to rely soon

--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,2 @@
 (library (name Lib) (public_name pesy.lib)
-    (libraries str sexplib yojson ppx_inline_test.runtime-lib pesy.utils)
-    (flags -w -33+9) (preprocess (pps ppx_expect ppx_inline_test))
-    (inline_tests (flags -verbose))) 
+    (libraries str sexplib yojson pesy.utils)) 
