--- a/.ci/build-platform.yml
+++ b/.ci/build-platform.yml
@@ -46,6 +46,8 @@ jobs:
       - ${{ if ne(parameters.platform, 'Windows') }}:
           - script: ./_build/install/default/bin/Runner.exe
             displayName: 'Running e2e tests'
+            env:
+              - OCAMLRUNPARAM: 'b'
       - template: utils/publish-build-cache.yml
       - task: PublishBuildArtifacts@1
         displayName: "Publish Artifact: ${{ parameters.platform }}"
