--- a/.ci/build-platform.yml
+++ b/.ci/build-platform.yml
@@ -43,6 +43,8 @@ jobs:
       - ${{ if eq(parameters.platform, 'Windows') }}:
           - script: .\_build\install\default\bin\Runner.exe
             displayName: 'Running e2e tests'
+            env:
+              TEMP: $(HomeDirectory)
       - ${{ if ne(parameters.platform, 'Windows') }}:
           - script: ./_build/install/default/bin/Runner.exe
             displayName: 'Running e2e tests'
