--- a/.ci/build-platform.yml
+++ b/.ci/build-platform.yml
@@ -41,7 +41,7 @@ jobs:
         displayName: "Building pesy npm cli (bundling)"
         workingDirectory: "npm-cli"
       - ${{ if eq(parameters.platform, 'Windows') }}:
-          - script: mkdir $(System.DefaultWorkingDirectory)/tests-tmp-dir
+          - script: mkdir $(System.DefaultWorkingDirectory)\tests-tmp-dir
             displayName: 'Creating temporary workspace for tests'
           - script: .\_build\install\default\bin\Runner.exe
             displayName: 'Running e2e tests'
