Explicitly specify files to be published

--- a/npm-cli/package.json
+++ b/npm-cli/package.json
@@ -16,6 +16,12 @@
     "reason",
     "ocaml"
   ],
+  "files": [
+    "package.json",
+    "pesy",
+    "share",
+    "pesy.bundle.js"
+  ],
   "license": "MIT",
   "devDependencies": {
     "bs-node": "github:reasonml-community/bs-node",
