Prepare npm release alpha.4 (#33)
* Explicitly specify files to be published

* Update message to explain the initial wait time

* Version bump 0.5.0-alpha.4

--- a/npm-cli/package.json
+++ b/npm-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pesy",
-  "version": "0.5.0-alpha.3",
+  "version": "0.5.0-alpha.4",
   "bin": {
     "pesy": "pesy"
   },
@@ -15,6 +15,12 @@
     "pesy",
     "reason",
     "ocaml"
+  ],
+  "files": [
+    "package.json",
+    "pesy",
+    "share",
+    "pesy.bundle.js"
   ],
   "license": "MIT",
   "devDependencies": {
