--- a/bin/dune
+++ b/bin/dune
@@ -1,2 +1,3 @@
 (executable (name Pesy) (public_name pesy)
-    (libraries pesy.lib pesy.utils cmdliner findlib)) 
+    (libraries prometheansacrifice--esy-pesy.lib
+        prometheansacrifice--esy-pesy.utils cmdliner findlib)) 
