--- a/prometheansacrifice--esy-pesy.opam
+++ b/prometheansacrifice--esy-pesy.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-name: "pesy"
+name: "prometheansacrifice--esy-pesy"
 description: "Esy Pesy - Your Esy Assistant"
 synopsis: "Esy Pesy - Your Esy Assistant"
 version: "0.5.0-alpha.6"
