--- a/bin/dune
+++ b/bin/dune
@@ -1,3 +1,3 @@
 (executable (name Pesy) (public_name pesy)
-    (libraries prometheansacrifice--esy-pesy.lib
-        prometheansacrifice--esy-pesy.utils cmdliner findlib)) 
+    (libraries pesy--esy-pesy.lib
+        pesy--esy-pesy.utils cmdliner findlib)) 
