Add bs-cmdliner to manage npm-cli's options

--- a/npm-cli/bsconfig.json
+++ b/npm-cli/bsconfig.json
@@ -10,7 +10,11 @@
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["tablecloth-bucklescript", "bs-node"],
+  "bs-dependencies": [
+    "tablecloth-bucklescript",
+    "bs-node",
+    "@elliottcable/bs-cmdliner"
+  ],
   "warnings": {
     "error": "+101"
   },
