--- a/utils/dune
+++ b/utils/dune
@@ -1,2 +1,2 @@
 (library (name Utils) (public_name pesy--esy-pesy.utils)
-    (libraries unix str pastel.lib)) 
+    (libraries unix yojson str pastel.lib)) 
