--- a/.ci/build-platform.yml
+++ b/.ci/build-platform.yml
@@ -1,10 +1,9 @@
 parameters:
   platform: "macOS"
   vmImage: "macOS-10.13"
-  STAGING_DIRECTORY: /Users/vsts/STAGING
-  STAGING_DIRECTORY_UNIX: /Users/vsts/STAGING
-  ESY__CACHE_INSTALL_PATH: /Users/vsts/.esy/3____________________________________________________________________/i
-  ESY__CACHE_SOURCE_TARBALL_PATH: /Users/vsts/.esy/source/i
+  STAGING_DIRECTORY: $(Agent.HomeDirectory)/STAGING
+  STAGING_DIRECTORY_UNIX: $(Agent.HomeDirectory)/STAGING
+  ESY__CACHE_SOURCE_TARBALL_PATH: $(Agent.HomeDirectory)/.esy/source/i
 
 jobs:
   - job: ${{ parameters.platform }}
