Stop restricting compiler version

--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
     "@opam/ocamlfind": "*",
     "@opam/sexplib": "*",
     "@opam/yojson": "*",
-    "@reason-native/pastel": "*",
-    "ocaml": "4.7.x"
+    "@reason-native/pastel": "*"
   },
   "devDependencies": {
     "pesy-self": "*",
@@ -90,7 +89,6 @@
     "@opam/sexplib": "link:./vendor/sexplib/sexplib.opam",
     "@opam/dune": "link:./vendor/dune/dune.opam",
     "@opam/yojson": "link:./vendor/yojson/yojson.opam",
-    "@reason-native/pastel": "link:./vendor/reason-native/pastel.json",
-    "ocaml": "4.7.1004"
+    "@reason-native/pastel": "link:./vendor/reason-native/pastel.json"
   }
 }
