--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@opam/sexplib": "link:./vendor/sexplib/sexplib.opam",
     "@opam/dune": "link:./vendor/dune/dune.opam",
     "@opam/yojson": "link:./vendor/yojson/yojson.opam",
-    "@reason-native/pastel": "link:./vendor/reason-native/pastel.json"
+    "@reason-native/pastel": "link:./vendor/reason-native/pastel.json",
+    "ocaml": "4.7.1004"
   }
 }
