Support 4.4 - 4.8 and drop seq from the vendored list
When dependencies: "ocaml": "4.4.2004 - 4.8" and devDependencies: "ocaml": "4.6.10 - 4.8",

Conflicting constraints:
@pesy/esy-pesy -> @reason-native/pastel -> @opam/re -> @opam/seq ->
ocaml@<4.7.0
@pesy/esy-pesy -> ocaml@=4.8.1000

ie if consuming packages want to use ocaml > 4.7, latest seq
package (which is basically empty since the compiler supports
natively) must be used. If consuming package is < 4.7, c-cube
fallback package must be used. Esy's resolutions field cannot be
used to vendor seq package - resolutions package can only be
used to pin one package at a time.

--- a/package.json
+++ b/package.json
@@ -63,9 +63,11 @@
     "@opam/ocamlfind": "*",
     "@opam/sexplib": "*",
     "@opam/yojson": "*",
-    "@reason-native/pastel": "*"
+    "@reason-native/pastel": "*",
+    "ocaml": "4.4.2004 - 4.8"
   },
   "devDependencies": {
+    "ocaml": "4.6.10 - 4.8",
     "pesy-self": "*",
     "refmterr": "*",
     "@opam/merlin": "*"
@@ -89,7 +91,6 @@
     "@opam/sexplib": "link:./vendor/sexplib/sexplib.opam",
     "@opam/dune": "link:./vendor/dune/dune.opam",
     "@opam/yojson": "link:./vendor/yojson/yojson.opam",
-    "@reason-native/pastel": "link:./vendor/reason-native/pastel.json",
-    "ocaml": "4.7.1004"
+    "@reason-native/pastel": "link:./vendor/reason-native/pastel.json"
   }
 }
