--- a/utils/dune
+++ b/utils/dune
@@ -1,2 +1,2 @@
-(library (name Utils) (public_name pesy--esy-pesy.utils)
-    (libraries unix yojson str pastel.lib)) 
+(library (name PesyEsyPesyUtils) (public_name pesy--esy-pesy.utils)
+    (modules (:standard)) (libraries unix yojson str pastel.lib rely.lib))
