--- a/npm-cli/bsconfig.json
+++ b/npm-cli/bsconfig.json
@@ -10,13 +10,11 @@
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": [
-    "tablecloth-bucklescript",
-    "bs-node",
-    "@elliottcable/bs-cmdliner"
-  ],
+  "bs-dependencies": ["tablecloth-bucklescript"],
+  "bsc-flags": ["-bs-g"],
   "warnings": {
-    "error": "+101"
+    "number": "-44-102-20",
+    "error": "+5"
   },
   "namespace": true,
   "refmt": 3
