Updated CI setup to assist issue #100

--- a/.ci/build-platform.yml
+++ b/.ci/build-platform.yml
@@ -1,9 +1,6 @@
 parameters:
   platform: "macOS"
   vmImage: "macOS-10.13"
-  STAGING_DIRECTORY: $(Agent.HomeDirectory)/STAGING
-  STAGING_DIRECTORY_UNIX: $(Agent.HomeDirectory)/STAGING
-  ESY__CACHE_SOURCE_TARBALL_PATH: $(Agent.HomeDirectory)/.esy/source/i
 
 jobs:
   - job: ${{ parameters.platform }}
@@ -11,37 +8,72 @@ jobs:
       vmImage: ${{ parameters.vmImage }}
       demands: node.js
     timeoutInMinutes: 120 # This is mostly for Windows
-    variables:
-      STAGING_DIRECTORY: ${{ parameters.STAGING_DIRECTORY }}
-      STAGING_DIRECTORY_UNIX: ${{ parameters.STAGING_DIRECTORY_UNIX }}
-      ESY__CACHE_INSTALL_PATH: ${{ parameters.ESY__CACHE_INSTALL_PATH }}
-      ESY__CACHE_SOURCE_TARBALL_PATH: ${{ parameters.ESY__CACHE_SOURCE_TARBALL_PATH }}
-
-    steps:
-      - template: use-calc-esy-install-path.yml
+    steps: 
+      - powershell: $Env:Path
+        continueOnError: true
+        condition: and(eq(variables['AGENT.OS'], 'Windows_NT'), and(eq(variables['Build.Reason'], 'PullRequest'), and(succeeded(), ne(variables['Build.SourceBranch'], variables['System.PullRequest.TargetBranch']))))
+        displayName: "Print env in powershell"
+      # Needed so that the mingw tar doesn't shadow the system tar. See
+      # pipelines.yaml. We need windows bsdtar from system32, not the mingw
+      # one. Note powershell doesn't need escaping of backslashes.
+      - powershell: Write-Host "##vso[task.setvariable variable=PATH;]C:\Windows\system32;${env:PATH}"
+        continueOnError: true
+        condition: eq(variables['AGENT.OS'], 'Windows_NT')
+        displayName: "Make sure windows/system32 is at front of path if windows"
+      - powershell: $Env:Path
+        continueOnError: true
+        condition: and(eq(variables['AGENT.OS'], 'Windows_NT'), and(eq(variables['Build.Reason'], 'PullRequest'), and(succeeded(), ne(variables['Build.SourceBranch'], variables['System.PullRequest.TargetBranch']))))
+        displayName: "Print env in powershell"
+      - powershell: get-command tar
+        continueOnError: true
+        condition: and(eq(variables['AGENT.OS'], 'Windows_NT'), and(eq(variables['Build.Reason'], 'PullRequest'), and(succeeded(), ne(variables['Build.SourceBranch'], variables['System.PullRequest.TargetBranch']))))
+        displayName: "Print where tar is located"
+      - powershell: tar --help
+        continueOnError: true
+        condition: and(eq(variables['AGENT.OS'], 'Windows_NT'), and(eq(variables['Build.Reason'], 'PullRequest'), and(succeeded(), ne(variables['Build.SourceBranch'], variables['System.PullRequest.TargetBranch']))))
+        displayName: "Print tar help"
+      - bash: |
+          # COMPUTE THE ESY INSTALL CACHE LOCATION AHEAD OF TIME
+          DESIRED_LEN="86"
+          # Note: This will need to change when upgrading esy version
+          # that reenables long paths on windows.
+          if [ "$AGENT_OS" == "Windows_NT" ]; then
+            DESIRED_LEN="33"
+          fi
+          HOME_ESY3="$HOME/.esy/3"
+          HOME_ESY3_LEN=${#HOME_ESY3}
+          NUM_UNDERS=$(echo "$(($DESIRED_LEN-$HOME_ESY3_LEN))")
+          UNDERS=$(printf "%-${NUM_UNDERS}s" "_")
+          UNDERS="${UNDERS// /_}"
+          THE_ESY__CACHE_INSTALL_PATH=${HOME_ESY3}${UNDERS}/i
+          if [ "$AGENT_OS" == "Windows_NT" ]; then
+            THE_ESY__CACHE_INSTALL_PATH=$( cygpath --mixed --absolute "$THE_ESY__CACHE_INSTALL_PATH")
+          fi
+          echo "THE_ESY__CACHE_INSTALL_PATH: $THE_ESY__CACHE_INSTALL_PATH"
+          # This will be exposed as an env var ESY__CACHE_INSTALL_PATH, or an
+          # Azure var esy__cache_install_path
+          echo "##vso[task.setvariable variable=esy__cache_install_path]$THE_ESY__CACHE_INSTALL_PATH"
+      # - bash: |
+      #     which esy
+      #     echo "$( which esy )"
+      #     echo "##vso[task.setvariable variable=esy_bin_location]$(which esy)"
+      #   displayName: "Find esy binary"
+      # - bash: echo ${ESY_BIN_LOCATION}
+      # displayName: "Print esy bin location"
+      - bash: env
+        displayName: "Print environment"
       - template: utils/use-node.yml
       - template: utils/use-esy.yml
-      - template: utils/restore-build-cache.yml
       - script: "esy install"
         displayName: "esy install"
+      - template: utils/restore-build-cache.yml
       - script: "esy build"
         displayName: "esy build"
-      - script: "esy npm-release"
-        displayName: "esy npm-release"
+      - template: utils/create-docs.yml
       - script: "esy test"
-        displayName: "Running unit tests"
-      - ${{ if eq(parameters.platform, 'Windows') }}:
-          - script: mkdir $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
-            displayName: 'Creating temporary workspace for tests'
-          - script: .\_build\install\default\bin\Runner.exe
-            displayName: 'Running e2e tests'
-            env:
-              TEMP: $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
-      - ${{ if ne(parameters.platform, 'Windows') }}:
-          - script: ./_build/install/default/bin/Runner.exe
-            displayName: 'Running e2e tests'
-            env:
-              OCAMLRUNPARAM: 'b'
+        displayName: "Test command"
+      - script: "esy release"
+        displayName: "esy release"
       - template: utils/publish-build-cache.yml
       - task: PublishBuildArtifacts@1
         displayName: "Publish Artifact: ${{ parameters.platform }}"
