--- a/.ci/build-platform.yml
+++ b/.ci/build-platform.yml
@@ -62,19 +62,7 @@ jobs:
       # displayName: "Print esy bin location"
       - bash: env
         displayName: "Print environment"
-      - template: utils/use-node.yml
-      - template: utils/use-esy.yml
-      - script: "esy install"
-        displayName: "esy install"
-      - template: utils/restore-build-cache.yml
-      - script: "esy build"
-        displayName: "esy build"
-      - template: utils/create-docs.yml
-      - script: "esy test"
-        displayName: "Test command"
-      - script: "esy release"
-        displayName: "esy release"
-      - template: utils/publish-build-cache.yml
+      - template: esy-build-steps.yml
       - task: PublishBuildArtifacts@1
         displayName: "Publish Artifact: ${{ parameters.platform }}"
         inputs:
