--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -2,12 +2,16 @@
 
 steps:
   - template: utils/use-node.yml
+  - template: utils/use-cache-npm.yml
   - template: utils/use-esy.yml
+  - template: utils/use-cache-esy.yml
   - script: "esy install"
     displayName: "esy install"
-  - template: utils/restore-build-cache.yml
+    condition: ne(variables.CACHE_RESTORED, 'true')
+  - template: utils/restore-build-cache.yml # Run this to make sure cached prebuilts work. 
   - script: "esy build"
     displayName: "esy build"
+    condition: ne(variables.CACHE_RESTORED, 'true')
   - template: utils/create-docs.yml
   - script: "esy test"
     displayName: "Test command"
