--- a/.ci/utils/use-cache-npm.yml
+++ b/.ci/utils/use-cache-npm.yml
@@ -7,3 +7,13 @@ steps:
        npm
     path: $(HOME)/.npm
   displayName: Cache npm
+  condition: ne(variables['AGENT.OS'], 'Windows_NT')
+- task: Cache@2
+  inputs:
+    key: 'npm | "$(Agent.OS)" | "$(Build.SourcesDirectory)/npm-cli/package-lock.json"'
+    restoreKeys: |
+       npm | "$(Agent.OS)"
+       npm
+    path: $(AppData)/npm-cache
+  displayName: Cache npm
+  condition: eq(variables['AGENT.OS'], 'Windows_NT')
