Enabled esy cache on windows

--- a/.ci/utils/use-cache-esy.yml
+++ b/.ci/utils/use-cache-esy.yml
@@ -1,6 +1,6 @@
 steps:
   - task: Cache@2
-    condition: and(eq(variables['Build.Reason'], 'PullRequest'), and(ne(variables['Agent.OS'], 'Windows_NT'), ne(variables['Build.SourceBranch'], variables['System.PullRequest.TargetBranch'])))
+    condition: and(eq(variables['Build.Reason'], 'PullRequest'), ne(variables['Build.SourceBranch'], variables['System.PullRequest.TargetBranch']))
     inputs:
       key: 'vPrimary | esy | "$(Agent.OS)" | "$(Build.SourcesDirectory)/npm-cli/package-lock.json"' # vPrimary, here, is just a way to bust cache during debugging. Inspired from https://docs.microsoft.com/en-us/azure/devops/pipelines/caching/?view=azure-devops#can-i-clear-a-cache" 
       path: $(HOME)/.esy
