--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -13,14 +13,14 @@ steps:
   - template: utils/create-docs.yml
   - script: "esy test"
     displayName: "Test command"
-  - script: mkdir $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
-    displayName: 'Creating temporary workspace for tests'
-    condition: eq(variables['Agent.OS'], 'Windows_NT')
-  - script: .\_build\install\default\bin\Runner.exe
-    displayName: 'Running e2e tests'
-    condition: eq(variables['Agent.OS'], 'Windows_NT')
-    env:
-      TEMP: $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
+  # - script: mkdir $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
+  #   displayName: 'Creating temporary workspace for tests'
+  #   condition: eq(variables['Agent.OS'], 'Windows_NT')
+  # - script: .\_build\install\default\bin\Runner.exe
+  #   displayName: 'Running e2e tests'
+  #   condition: eq(variables['Agent.OS'], 'Windows_NT')
+  #   env:
+  #     TEMP: $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
   - script: ./_build/install/default/bin/Runner.exe
     displayName: 'Running e2e tests'
     condition: ne(variables['Agent.OS'], 'Windows_NT')
